--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ links:
     url: /contact-us/
   - title: Example Page
     url: /example-page/
-  - title: Menu Title
+  - title: Folder
     collection: hello
   - title: Content
     url: /Content/permalink
